--- a/css/adaptive.css
+++ b/css/adaptive.css
@@ -1,3 +1,5 @@
+
+
 @media (320px <=width <=1440px) {
 
     .nav__list {
@@ -62,13 +64,12 @@
     }
 
 
+}
 
 
-
-
+@media (320px <=width <=1120px){
     .brands__logos-view,
-    .brands__logos-more,
-    .witdh-768 {
+    .brands__logos-more {
         display: grid;
         grid-template-columns: repeat(3, 1fr);
         column-gap: 32px;
@@ -80,10 +81,8 @@
         display: none;
     }
 
-
-
-
 }
+
 
 
 
